<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" 
    android:padding="@dimen/activity_horizontal_margin"
     >
<TextView
        android:id="@+id/Number2Text"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/calculate"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<TextView
    android:id="@+id/Number1Text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/Number2Text"
    android:layout_below="@+id/Number2Text"
    android:layout_marginTop="150dp"
    android:text="@string/InformationLabel"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<Button
    android:id="@+id/BackButton1"
    style="@style/ButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
    android:background="@drawable/buttonclickdrawable"
    android:text="@string/Back" />

</RelativeLayout>
