<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimesTables" >

    <TextView
        android:id="@+id/Number2Text"
        style="@style/NumberType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/OperatorText"
        android:layout_alignRight="@+id/imageView1"
        android:gravity="right"
        android:text="Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/OperatorText"
        style="@style/NumberType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_centerVertical="true"
        android:text="@string/product"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/score1"
        style="@style/UpTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Number1Text"
        android:text="@string/Score" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OperatorText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/calculationpic" />

    <TextView
        android:id="@+id/Number1Text"
        style="@style/NumberType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Number2Text"
        android:layout_alignRight="@+id/Number2Text"
        android:layout_marginBottom="18dp"
        android:gravity="end"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/score1"
        android:layout_below="@+id/score1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ResultRow"
            android:background="@color/Light_Blue"
            android:gravity="center"
            android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="29dp" >

    </LinearLayout>

    <Button
        android:id="@+id/CleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        style="@style/ButtonStyle"
        android:background="@drawable/buttonclickdrawable"
        android:text="@string/Clean" />

</RelativeLayout>